Actual TIFA bug!

--- a/examples/Example JN Problem.ipynb
+++ b/examples/Example JN Problem.ipynb
@@ -135,7 +135,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.5.4"
   },
-  "student_mode": true
+  "student_mode": false
  },
  "nbformat": 4,
  "nbformat_minor": 2
