Fix In operator finding

--- a/examples/Example JN Problem.ipynb
+++ b/examples/Example JN Problem.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {
     "deletable": false
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "scrolled": true
@@ -36,7 +36,7 @@
        "6"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -135,7 +135,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.5.4"
   },
-  "student_mode": false
+  "student_mode": true
  },
  "nbformat": 4,
  "nbformat_minor": 2
