Vastly improve the code and documentation for grade_magic

--- a/examples/Example JN Problem.ipynb
+++ b/examples/Example JN Problem.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {
     "deletable": false
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {
     "deletable": false,
     "scrolled": true
@@ -33,10 +33,10 @@
     {
      "data": {
       "text/plain": [
-       "6"
+       "'sleep'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,58 +47,95 @@
     "    for x in a_list:\n",
     "        s += x\n",
     "    return s\n",
-    "summate([1,2,3])"
+    "summate([1,2,3])\n",
+    "'name'\n",
+    "'travel home'\n",
+    "'duration'\n",
+    "'fun_factor'\n",
+    "'homework'\n",
+    "'visit friends'\n",
+    "'dinner with grandma'\n",
+    "'sleep'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {
     "deletable": false,
     "editable": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "data": {
       "application/javascript": [
        "\n",
-       "var cells = Jupyter.notebook.get_cells();\n",
-       "if (cells.length > 0) {\n",
-       "    var last = cells[cells.length-1];\n",
-       "    $(last.element).animate({\"background-color\": \"#F6FAFF\"}, 1000);\n",
-       "}\n",
-       "var source_code = Jupyter.notebook.get_cells().map(function(cell) {\n",
+       "// Convert Notebook cells to a string of Python code\n",
+       "var makePython = function(cell) {\n",
        "    if (cell.cell_type == \"code\") {\n",
-       "        var source = cell.code_mirror.getValue();\n",
-       "        if (!source.startsWith(\"%\")) {\n",
+       "        // Code is embedded unchanged, unless it is magic\n",
+       "        var source = cell.get_text();\n",
+       "        if (source.startsWith('%')) {\n",
+       "            // Skip magic\n",
+       "            return '';\n",
+       "        } else {\n",
        "            return source;\n",
        "        }\n",
+       "    } else if (cell.cell_type == \"markdown\" ||\n",
+       "               cell.cell_type == \"raw\") {\n",
+       "        // Markdown and text is wrapped in a string.\n",
+       "        var escaped_text = cell.get_text().replace(/'''/g, \"\\\\'\\\\'\\\\'\");\n",
+       "        return \"'''\"+escaped_text+\"'''\";\n",
        "    }\n",
-       "}).join(\"\\n\");\n",
+       "}\n",
+       "var isUsable = function(cell) {\n",
+       "    return cell.cell_type == \"code\" ||\n",
+       "           cell.cell_type == \"markdown\" ||\n",
+       "           cell.cell_type == \"raw\";\n",
+       "}\n",
+       "var cells = Jupyter.notebook.get_cells();\n",
+       "var source_code = cells.filter(isUsable).map(makePython).join(\"\\n\");\n",
        "source_code = JSON.stringify(source_code);\n",
-       "var instructor_code = \"student_code=\"+source_code+\"\\n\";\n",
-       "//instructor_code += \"\\nimport ast\\nprint(ast.dump(ast.parse(student_code)))\\nprint('Great')\"\n",
-       "instructor_code += \"from pedal.plugins.grade_magic import blockpy_grade\\n\";\n",
-       "instructor_code += \"result=blockpy_grade(1, student_code);\\n\"\n",
-       "instructor_code += \"print(result)\\n\"\n",
-       "console.log(instructor_code);\n",
+       "console.log(source_code);\n",
+       "// Start constructing the feedback code (which will be Python).\n",
+       "var on_run_code = [];\n",
+       "on_run_code.push(\"student_code=\"+source_code);\n",
+       "\n",
+       "// While we are accessing the server, recolor the last cell a little.\n",
+       "var last = null;\n",
+       "if (cells.length > 0) {\n",
+       "    last = cells[cells.length-1];\n",
+       "    $(last.element).animate({\"background-color\": \"#F6FAFF\"}, 1000);\n",
+       "}\n",
+       "\n",
+       "on_run_code.push(\"from pedal.plugins.grade_magic import blockpy_grade\");\n",
+       "on_run_code.push(\"print(blockpy_grade(1, student_code))\");\n",
+       "\n",
+       "on_run_code = on_run_code.join(\"\\n\");\n",
+       "console.log(on_run_code);\n",
        "var kernel = IPython.notebook.kernel;\n",
        "if (kernel !== null) {\n",
-       "    var t = kernel.execute(instructor_code, { 'iopub' : {'output' : function(x) {\n",
+       "    var t = kernel.execute(on_run_code, { 'iopub' : {'output' : function(x) {\n",
        "        if (x.msg_type == \"error\") {\n",
-       "            console.error(x);\n",
-       "            console.error(x.content);\n",
-       "            element.text(x.content.ename+\": \"+x.content.evalue+\"\\n\"+x.content.traceback.join(\"\\n\"))\n",
+       "            // If this was an error, show the traceback properly.\n",
+       "            if (last !== null) {\n",
+       "                last.output_area.append_error(x.content);\n",
+       "                console.error(x);\n",
+       "            } else {\n",
+       "                console.error(\"Could not append to final cell.\", x);\n",
+       "            }\n",
        "        } else if (!x.content.data && x.content.text) {\n",
+       "            // If it was valid data, we show it as HTML.\n",
        "            console.log(x);\n",
        "            element.html(x.content.text.replace(/\\n/g, \"<br>\"));\n",
-       "            //console.log(x);\n",
        "        } else {\n",
+       "            // I'm not sure what it is - better dump it on the console.\n",
        "            console.log(x);\n",
        "        }\n",
-       "        if (cells.length > 0) {\n",
-       "            var last = cells[cells.length-1];\n",
+       "        // Decolor the last cell if it was there.\n",
+       "        if (last !== null) {\n",
+       "            last = cells[cells.length-1];\n",
        "            $(last.element).animate({\"background-color\": \"white\"}, 1000);\n",
        "        }\n",
        "    }}});\n",
