Fix the behavior for append

--- a/examples/Example JN Problem.ipynb
+++ b/examples/Example JN Problem.ipynb
@@ -2,19 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": false
-   },
+   "metadata": {},
    "source": [
     "Create, initialize, and print an integer variable that represents your age."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "deletable": false
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from pedal.plugins.grade_magic import load_ipython_extension\n",
@@ -24,9 +20,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {
-    "deletable": false,
     "scrolled": true
    },
    "outputs": [
@@ -36,7 +31,7 @@
        "'sleep'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,10 +55,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {
-    "deletable": false,
-    "editable": false,
     "scrolled": false
    },
    "outputs": [
@@ -109,8 +102,8 @@
        "    $(last.element).animate({\"background-color\": \"#F6FAFF\"}, 1000);\n",
        "}\n",
        "\n",
-       "on_run_code.push(\"from pedal.plugins.grade_magic import blockpy_grade\");\n",
-       "on_run_code.push(\"print(blockpy_grade(1, student_code))\");\n",
+       "on_run_code.push(\"from pedal.plugins.grade_magic import execute_on_run_code\");\n",
+       "on_run_code.push('print(execute_on_run_code(\"gently(\\\\\\\"TEST\\\\\\\")\", student_code))');\n",
        "\n",
        "on_run_code = on_run_code.join(\"\\n\");\n",
        "console.log(on_run_code);\n",
@@ -150,7 +143,8 @@
     }
    ],
    "source": [
-    "%grade_blockpy 1"
+    "%%grade\n",
+    "gently(\\\"TEST\\\")"
    ]
   }
  ],
@@ -172,7 +166,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.5.4"
   },
-  "student_mode": true
+  "student_mode": false
  },
  "nbformat": 4,
  "nbformat_minor": 2
