I believe this resolves the input issue for now (slightly hackish jupyter notebooks)

--- a/examples/Example JN Problem.ipynb
+++ b/examples/Example JN Problem.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -31,7 +31,7 @@
        "'sleep'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -99,11 +99,13 @@
        "var last = null;\n",
        "if (cells.length > 0) {\n",
        "    last = cells[cells.length-1];\n",
-       "    $(last.element).animate({\"background-color\": \"#F6FAFF\"}, 1000);\n",
+       "    $(last.element).animate({\"background-color\": \"#E0E6FF\"}, 1000);\n",
        "}\n",
        "\n",
-       "on_run_code.push(\"from pedal.plugins.grade_magic import execute_on_run_code\");\n",
-       "on_run_code.push('print(execute_on_run_code(\"gently(\\\\\\\"TEST\\\\\\\")\", student_code))');\n",
+       "on_run_code.push(\"from pedal.plugins.grade_magic import blockpy_grade\");\n",
+       "on_run_code.push('import json')\n",
+       "on_run_code.push('inputs = json.dumps(\"test\")')\n",
+       "on_run_code.push(\"print(blockpy_grade(1, student_code, inputs))\");\n",
        "\n",
        "on_run_code = on_run_code.join(\"\\n\");\n",
        "console.log(on_run_code);\n",
@@ -143,8 +145,7 @@
     }
    ],
    "source": [
-    "%%grade\n",
-    "gently(\\\"TEST\\\")"
+    "%grade_blockpy 1,test"
    ]
   },
   {
