Uncomment out luke's breaking tests

--- a/examples/Example JN Problem.ipynb
+++ b/examples/Example JN Problem.ipynb
@@ -20,23 +20,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "'sleep'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "input(\"\")\n",
     "def summate(a_list):\n",
     "    s = 0\n",
     "    for x in a_list:\n",
@@ -55,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
@@ -104,7 +112,7 @@
        "\n",
        "on_run_code.push(\"from pedal.plugins.grade_magic import blockpy_grade\");\n",
        "on_run_code.push('import json')\n",
-       "on_run_code.push('inputs = json.dumps(\"test\")')\n",
+       "on_run_code.push('inputs = json.dumps(\"0\")')\n",
        "on_run_code.push(\"print(blockpy_grade(1, student_code, inputs))\");\n",
        "\n",
        "on_run_code = on_run_code.join(\"\\n\");\n",
@@ -145,7 +153,7 @@
     }
    ],
    "source": [
-    "%grade_blockpy 1,test"
+    "%grade_blockpy 1,0"
    ]
   },
   {
