--- a/examples/d14-cw4.ipynb
+++ b/examples/d14-cw4.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "\n",
        "on_run_code.push(\"from pedal.plugins.grade_magic import blockpy_grade\");\n",
        "on_run_code.push('import json')\n",
-       "on_run_code.push('inputs = json.dumps(\"1000\")')\n",
+       "on_run_code.push('inputs = json.dumps(\"\")')\n",
        "on_run_code.push(\"print(blockpy_grade(403, student_code, inputs))\");\n",
        "\n",
        "on_run_code = on_run_code.join(\"\\n\");\n",
