--- a/examples/Example JN Problem.ipynb
+++ b/examples/Example JN Problem.ipynb
@@ -9,18 +9,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<strong>Runtime</strong>: AttributeError<br><pre>module \\'sys\\' has no attribute \\'modules\\'</pre>\\nThis happens when you try to do <code>SOMETHING.WHATEVER</code> and either SOMETHING wasn\\'t declared or WHATEVER isn\\'t an attribute of SOMETHING. This error message is telling you that the object on the left hand side of the dot, does not have the attribute or method on the right hand side.      <br><b>Suggestion: </b>You were probably trying to either get access to some data (weather.get) or append (a_list.append). If it\\'s the first one, you should make sure the module is imported and that you are called its function correctly. If it\\'s the second one, you should make sure you spelled \"append\" right and that you are using a variable with a list for a value.'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from pedal.plugins.grade_magic import load_ipython_extension\n",
+    "from pedal.plugins.grade_magic import load_ipython_extension, execute_on_run_code\n",
     "from IPython import get_ipython\n",
-    "load_ipython_extension(get_ipython())"
+    "load_ipython_extension(get_ipython())\n",
+    "execute_on_run_code('', 'from pedal.sandbox import sandbox\\nsandbox', '')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -38,12 +50,14 @@
        "'sleep'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "plt.plot([1,2,3])\n",
     "input(\"\")\n",
     "def summate(a_list):\n",
     "    s = 0\n",
@@ -63,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {
     "scrolled": false
    },
